# Jarvis2.0

./: .gitignore  CMakeLists.txt  README.md  main.c  tts_server.py
.claude/: settings.local.json
include/: asr.h  audio_output.h  bemfa.h  deepseek.h  device.h  lyrics_parser.h  music.h  pipeline.h  tts.h  video.h
lv_drivers/: lv_drv_conf.h
lv_drivers/sdl/: sdl.h  sdl_common.h  sdl_gpu.h
lvgl/: lv_conf.h
src/: asr.c  audio_output.c  bemfa.c  deepseek.c  device.c  lyrics_parser.c  music.c  pipeline.c  tts.c  video.c
ui/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.c  ui_events.h
ui/images/: ui_img_1363945504.c  ui_img_closeclean_png.c  ui_img_closecur_png.c  ui_img_closeice_png.c  ui_img_closelig_png.c  ui_img_closenest_png.c  ui_img_closereg_png.c  ui_img_closewash_png.c  ui_img_core_png.c  ui_img_fly_png.c  ui_img_home_png.c  ui_img_humd_png.c  ui_img_jarvis3_png.c  ui_img_last2_png.c  ui_img_light1_png.c  ui_img_line1_png.c  ui_img_line_png.c  ui_img_mainfunct_png.c  ui_img_mp4_png.c  ui_img_music2_png.c  ui_img_next1_png.c  ui_img_next2_png.c  ui_img_openclean_png.c  ui_img_opencur_png.c  ui_img_openice_png.c  ui_img_openlig_png.c  ui_img_opennest_png.c  ui_img_openreg_png.c  ui_img_openwash_png.c  ui_img_shutdown_png.c  ui_img_soun2_png.c  ui_img_speak_png.c  ui_img_start_png.c  ui_img_stop_png.c  ui_img_temp_png.c  ui_img_time_png.c  ui_img_video_png.c  ui_img_wifi__png.c
ui/screens/: ui_houseScreen.c  ui_loginScreen.c  ui_mainScreen.c  ui_musicScreen.c  ui_videoScreen.c
