SET(SOURCES screens/ui_loginScreen.c
    screens/ui_mainScreen.c
    screens/ui_houseScreen.c
    screens/ui_musicScreen.c
    screens/ui_videoScreen.c
    ui.c
    components/ui_comp_hook.c
    ui_helpers.c
    ui_events.c
    images/ui_img_ironman_png.c
    images/ui_img_mainfunct_png.c
    images/ui_img_home_png.c
    images/ui_img_video_png.c
    images/ui_img_music2_png.c
    images/ui_img_speak_png.c
    images/ui_img_jarvis3_png.c
    images/ui_img_time_png.c
    images/ui_img_wifi__png.c
    images/ui_img_shutdown_png.c
    images/ui_img_fly_png.c
    images/ui_img_core_png.c
    images/ui_img_temp_png.c
    images/ui_img_humd_png.c
    images/ui_img_light1_png.c
    images/ui_img_closenest_png.c
    images/ui_img_opennest_png.c
    images/ui_img_openice_png.c
    images/ui_img_closelig_png.c
    images/ui_img_closeice_png.c
    images/ui_img_closeclean_png.c
    images/ui_img_openclean_png.c
    images/ui_img_openlig_png.c
    images/ui_img_closereg_png.c
    images/ui_img_openreg_png.c
    images/ui_img_closewash_png.c
    images/ui_img_openwash_png.c
    images/ui_img_closecur_png.c
    images/ui_img_opencur_png.c
    images/ui_img_stop_png.c
    images/ui_img_start_png.c
    images/ui_img_next1_png.c
    images/ui_img_next2_png.c
    images/ui_img_last2_png.c
    images/ui_img_1363945504.c
    images/ui_img_soun2_png.c
    images/ui_img_line_png.c
    images/ui_img_line1_png.c
    images/ui_img_mp4_png.c
    ui_temporary_image.c)

add_library(ui ${SOURCES})
